--- a/package.json
+++ b/package.json
@@ -27,16 +27,17 @@
     "tronweb": "^6.0.3",
     "url": "^0.11.4"
   },
-  "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.30.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^16.3.0",
-    "react-app-rewired": "^2.2.1",
-    "vite": "^7.0.4"
-  }
+ "devDependencies": {
+  "@eslint/js": "^9.30.1",
+  "@types/react": "^19.1.8",
+  "@types/react-dom": "^19.1.6",
+  "@vitejs/plugin-react": "^4.6.0",
+  "eslint": "^9.30.1",
+  "eslint-plugin-react-hooks": "^5.2.0",
+  "eslint-plugin-react-refresh": "^0.4.20",
+  "globals": "^16.3.0",
+  "typescript": "^5.4.5",
+  "vite": "^7.0.4"
+}
+
 }
